--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -72,14 +72,14 @@
                                                 style="background-image: url('{{tile.thumbnail.src}}');"
                                         >
                                             <a href="{{ tile.link }}"></a>
-                                            <div class="tile_content">
-                                                <h2 class="tile_title">
-                                                    {{ tile.title }}
-                                                </h2>
-                                                <div class="tile_excerpt">
-                                                    {{ tile.meta('excerpt') }}
-                                                </div>
-                                            </div>
+{#                                            <div class="tile_content">#}
+{#                                                <h2 class="tile_title">#}
+{#                                                    {{ tile.title }}#}
+{#                                                </h2>#}
+{#                                                <div class="tile_excerpt">#}
+{#                                                    {{ tile.meta('excerpt') }}#}
+{#                                                </div>#}
+{#                                            </div>#}
                                         </div>
                                     {% endfor %}
                                 </div>
